style.css
/*
Theme Name: RHS Twenty Twenty One Child
Theme URL: https://redhetsterrebos.nl
Description: Red Het Sterrebos Theme
Theme Author: Tulband
Author URL:
Template: twentytwentyone
Version: 1.0.0
Text Domain: rhs-twentytwentyone-child
*/

/****************** footer *********************/

.site-name {
	margin-top: 9rem;
}



/*************** weird ass widget area **************/

.widget-area {
	grid-template-columns: none !important;
	margin-top: 1rem !important;
	padding-top: 1rem !important;
}

.wp-block-group__inner-container {
	width: 80%;
}

.wp-block-group__inner-container h2 {
	text-align: center;
}

.wp-block-archives-list {
	display: flex;
	flex-flow: wrap;
	justify-content: space-evenly;
	width: 90%;
}


.wp-block-archives-list li {
	list-style-type: none;
	padding: 1rem;
}

/*********** top-header-menu *********/
.rhs-top-header-menu {
	width: 90%;
	text-align: right;
}

.rhs-top-header-menu li {
	display: inline;
	list-style-type: none;
	padding-left: 1rem;
}


.current-lang {
	font-weight: bold;
}

